[package]
name = "bitcoin-send-tx-p2p"
version = "0.1.2"
authors = ["Andrew Toth"]
license = "MIT"
homepage = "https://github.com/andrewtoth/bitcoin-send-tx-p2p/"
repository = "https://github.com/andrewtoth/bitcoin-send-tx-p2p/"
documentation = "https://docs.rs/bitcoin-send-tx-p2p/"
description = "Send a bitcoin tx through the peer-to-peer protocol via clearnet or tor"
keywords = [ "crypto", "bitcoin", "p2p" ]
readme = "README.md"
edition = "2021"

[features]
default = []
tor = ["dep:tokio-socks"]

[package.metadata.docs.rs]
features = [ "tor" ]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1.0"
tokio = { version = "1.20.1", features = ["net", "io-util", "rt-multi-thread", "time"] }
bitcoin = { version = "0.28.0", features = ["rand"] }
async-trait = "0.1.57"
log = "0.4.17"
tokio-socks = { version = "0.5.1", optional = true }

[dev-dependencies]
tokio = { version = "1.20.1", features = ["macros"] }
tokio-test = "0.4.2"
hex = "0.4.3"
env_logger = "0.9.0"
bitcoind = { version = "0.26.1", features = ["23_0"] }
bitcoincore-rpc = "0.15.0"