[package]
name = "bitcoin-send-tx-p2p"
version = "0.2.0"
authors = ["Andrew Toth"]
license = "MIT"
homepage = "https://github.com/andrewtoth/bitcoin-send-tx-p2p/"
repository = "https://github.com/andrewtoth/bitcoin-send-tx-p2p/"
documentation = "https://docs.rs/bitcoin-send-tx-p2p/"
description = "Send a bitcoin tx through the peer-to-peer protocol via clearnet or tor"
keywords = ["crypto", "bitcoin", "p2p"]
readme = "README.md"
edition = "2021"

[features]
default = []
tor = ["tokio-socks"]

[package.metadata.docs.rs]
features = ["tor"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bitcoin = { version = "0.32", features = ["rand-std"] }
async-trait = "0.1"
log = "0.4"
thiserror = "1.0.50"
tokio = { version = "1", features = [
    "net",
    "io-util",
    "rt-multi-thread",
    "time",
] }
tokio-socks = { version = "0.5", optional = true }

[dev-dependencies]
bitcoincore-rpc = "0.19"
corepc-node = { version = "0.5", default-features = false, features = ["28_0"] }
env_logger = "0.11"
hex = "0.4"
tokio = { version = "1", features = ["macros"] }
tokio-test = "0.4"

